almost done index page

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
 <!-- main nav -->
       <nav class="nav">
         <ul class="nav-list">
-          <li><a class="nav-item studio-item" href="">Студия</a></li>
+          <li><a class="nav-item studio-item" href="./index.html">Студия</a></li>
           <li><a class="nav-item portfolio" href="./portfolio.html">Портфолио</a></li>
           <li><a class="nav-item" href="">Контакты</a></li>
         </ul>
