fixed header and footer logo issue

--- a/index.html
+++ b/index.html
@@ -16,29 +16,29 @@
         <div class="container">
           <div class="header">
         <!-- logo -->
-          <div class="logo"> 
-            <a class="logo-title" href="./index.html">Web<span class="logo-title studio-span">Studio</span></a>
-          </div>
+            <div class="logo"> 
+              <a class="logo-title" href="./index.html">Web<span class="logo-title studio-span">Studio</span></a>
+            </div>
 
-          <!-- main nav -->
-          <nav class="nav">
-            <ul class="nav-list">
-              <li><a class="nav-item studio-item" href="./index.html">Студия</a></li>
-              <li><a class="nav-item portfolio" href="./portfolio.html">Портфолио</a></li>
-              <li><a class="nav-item" href="">Контакты</a></li>
-            </ul>
-          </nav>
+            <!-- main nav -->
+            <nav class="nav">
+              <ul class="nav-list">
+                <li><a class="nav-item studio-item" href="./index.html">Студия</a></li>
+                <li><a class="nav-item portfolio" href="./portfolio.html">Портфолио</a></li>
+                <li><a class="nav-item" href="">Контакты</a></li>
+              </ul>
+            </nav>
 
-          <!-- contacts -->
-          <div class="contact">
-            <a class="contact-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a class="contact-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+            <!-- contacts -->
+            <div class="contact">
+              <a class="contact-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              <a class="contact-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+            </div>
           </div>
         </div>
-      </div>
-    </header>
+      </header>
     <main>
-      <!-- hero -->
+      <!-- HERO section -->
      
           <section class="hero">
             <div class="container">
@@ -128,7 +128,7 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a class="logo-title" href="./">Web<span class="footer-logo-span">Studio</span></a>
+        <a class="footer-logo-title" href="./">Web<span class="footer-logo-span">Studio</span></a>
           <address class="f-address">
             <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
             <a class="footer-mail" href="mailto:info@example.com">info@example.com</a>
