--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <!-- HERO section -->
      
           <section class="hero">
-            <div class="container">
+            <div class="container hero-header">
               <h1 class="hero-title">Эффективные решения </br> для вашего бизнеса</h1>
               <button class="button" type="button" value="Заказать услугу"><span>Заказать услугу</span></button>
             </div> 
