--- a/portfolio.html
+++ b/portfolio.html
@@ -12,31 +12,35 @@
   </head>
 
   <body>
-    <header>
+    <header> 
+      <div class="container">
+        <div class="header">
       <!-- logo -->
-      <div class="logo"> 
-        <a class="logo-title" href="./index.html">Web<span class="logo-title studio-span">Studio</span></a>
-      </div>
+          <div class="logo"> 
+            <a class="logo-title" href="./index.html">Web<span class="logo-title studio-span">Studio</span></a>
+          </div>
 
-<!-- main nav -->
-      <nav class="nav">
-        <ul class="nav-list">
-          <li><a class="nav-item studio-item" href="./index.html">Студия</a></li>
-          <li><a class="nav-item portfolio" href="./portfolio.html">Портфолио</a></li>
-          <li><a class="nav-item" href="">Контакты</a></li>
-        </ul>
-      </nav>
+          <!-- main nav -->
+          <nav class="nav">
+            <ul class="nav-list">
+              <li><a class="nav-item studio-item" href="./index.html">Студия</a></li>
+              <li><a class="nav-item portfolio" href="./portfolio.html">Портфолио</a></li>
+              <li><a class="nav-item" href="">Контакты</a></li>
+            </ul>
+          </nav>
 
-<!-- contacts -->
-      <div class="contact">
-        <a class="contact-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a class="contact-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+          <!-- contacts -->
+          <div class="contact">
+            <a class="contact-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="contact-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+          </div>
+        </div>
       </div>
     </header>
 
  <!-- Filter -->
       <main>
-          <div class="filter">
+          <div class="container filter">
               <ul class="filter-items">
                   <li><button class="filter-item all" type="button">Все</button></li>
                   <li><button class="filter-item" type="button">Веб-сайты</button></li>
@@ -48,50 +52,50 @@
           
 
 <!-- Portfolio -->
-        <div>
+        <div class="container portfolio">
           <ul class="portfolio-items">
               <li class="portfolio-item">
-                  <img src="./images/port1.jpg" alt="Технокряк" width="370">
+                  <img class="port-image" src="./images/port1.jpg" alt="Технокряк" width="370">
                   <h3 class="portfolio-title">Технокряк</h>
                   <p class="portfolio-description">Веб-сайт</p>
               </li>
               <li class="portfolio-item">
-                <img src="./images/port2.jpg" alt="Постер New Orlean vs Golden Star" width="370">
+                <img class="port-image" src="./images/port2.jpg" alt="Постер New Orlean vs Golden Star" width="370">
                   <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h>
                   <p class="portfolio-description">Дизайн</p>
               </li>
               <li class="portfolio-item">
-                <img src="./images/port3.jpg" alt="Ресторан Seafood" width="370">
+                <img class="port-image" src="./images/port3.jpg" alt="Ресторан Seafood" width="370">
                   <h3 class="portfolio-title">Ресторан Seafood</h>
                   <p class="portfolio-description">Приложение</p>
               </li>
               <li class="portfolio-item">
-                <img src="./images/port4.jpg" alt="Проект Prime" width="370">
+                <img class="port-image" src="./images/port4.jpg" alt="Проект Prime" width="370">
                   <h3 class="portfolio-title">Проект Prime</h>
                   <p class="portfolio-description">Маркетинг</p>
               </li>
               <li class="portfolio-item"> 
-                <img src="./images/port5.jpg" alt="Проект Boxes" width="370">
+                <img class="port-image" src="./images/port5.jpg" alt="Проект Boxes" width="370">
                   <h3 class="portfolio-title">Проект Boxes</h>
                   <p class="portfolio-description">Приложение</p>
               </li>
               <li class="portfolio-item">
-                <img src="./images/port6.jpg" alt="Inspiration has no Borders" width="370">
+                <img class="port-image" src="./images/port6.jpg" alt="Inspiration has no Borders" width="370">
                   <h3 class="portfolio-title">Inspiration has no Borders</h>
                   <p class="portfolio-description">Веб-сайт</p>
               </li>
               <li class="portfolio-item">
-                <img src="./images/port7.jpg" alt="Издание Limited Edition" width="370">
+                <img class="port-image" src="./images/port7.jpg" alt="Издание Limited Edition" width="370">
                   <h3 class="portfolio-title">Издание Limited Edition</h>
                   <p class="portfolio-description">Дизайн</p>
               </li>
               <li class="portfolio-item">
-                <img src="./images/port8.jpg" alt="роект LAB" width="370">
+                <img class="port-image" src="./images/port8.jpg" alt="роект LAB" width="370">
                   <h3 class="portfolio-title">Проект LAB</h>
                   <p class="portfolio-description">Маркетинг</p>
               </li>
               <li class="portfolio-item">
-                <img src="./images/port9.jpg" alt="Growing Business" width="370">
+                <img class="port-image" src="./images/port9.jpg" alt="Growing Business" width="370">
                   <h3 class="portfolio-title">Growing Business</h>
                   <p class="portfolio-description">Приложение</p>
               </li>
@@ -99,12 +103,14 @@
         </div>
     </main>
     <footer class="footer">
-      <a class="logo-title" href="./">Web<span class="footer-logo-span">Studio</span></a>
-      <address>
-        <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
-        <a class="footer-mail" href="mailto:info@example.com">info@example.com</a>
-        <a class="footer-tel" href="tel:+380991111111">+38 099 111 11 11</a>
-      </address>
+      <div class="container">
+        <a class="footer-logo-title" href="./">Web<span class="footer-logo-span">Studio</span></a>
+          <address class="f-address">
+            <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
+            <a class="footer-mail" href="mailto:info@example.com">info@example.com</a>
+            <a class="footer-tel" href="tel:+380991111111">+38 099 111 11 11</a>
+          </address>
+    </div>
     </footer>
   </body>
 </html>
