portfolio images sizing fix

--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
         <div class="container portfolio">
           <ul class="portfolio-items">
               <li class="portfolio-item">
-                  <img class="port-image" src="./images/port1.jpg" alt="Технокряк" width="370">
+                  <img class="port-image" src="./images/port1.jpg" alt="Технокряк">
                   <h3 class="portfolio-title">Технокряк</h>
                   <p class="portfolio-description">Веб-сайт</p>
               </li>
