paddings, alignment fixed

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <a class="logo-title" href="./index.html">Web<span class="logo-title studio-span">Studio</span></a>
             </div>
 
-            <!-- main nav -->
+        <!-- main nav -->
             <nav class="nav">
               <ul class="nav-list">
                 <li><a class="nav-item studio-item" href="./index.html">Студия</a></li>
@@ -29,11 +29,12 @@
               </ul>
             </nav>
 
-            <!-- contacts -->
+        <!-- contacts -->
             <div class="contact">
               <a class="contact-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
               <a class="contact-tel" href="tel:+380961111111">+38 096 111 11 11</a>
             </div>
+
           </div>
         </div>
       </header>
@@ -128,13 +129,15 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a class="footer-logo-title" href="./">Web<span class="footer-logo-span">Studio</span></a>
-          <address class="f-address">
-            <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
-            <a class="footer-mail" href="mailto:info@example.com">info@example.com</a>
-            <a class="footer-tel" href="tel:+380991111111">+38 099 111 11 11</a>
-          </address>
-    </div>
+        <div class="footer-info">
+          <a class="footer-logo-title" href="./">Web<span       class="footer-logo-span">Studio</span></a>
+            <address class="f-address">
+              <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
+              <a class="footer-mail" href="mailto:info@example.com">info@example.com</a>
+              <a class="footer-tel" href="tel:+380991111111">+38 099 111 11 11</a>
+            </address>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
