--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-      <header> 
+        <header> 
         <div class="container">
           <div class="header">
         <!-- logo -->
@@ -23,9 +23,9 @@
         <!-- main nav -->
             <nav class="nav">
               <ul class="nav-list">
-                <li><a class="nav-item studio-item" href="./index.html">Студия</a></li>
-                <li><a class="nav-item portfolio" href="./portfolio.html">Портфолио</a></li>
-                <li><a class="nav-item" href="">Контакты</a></li>
+                <li class="nav-item"><a class="nav-link studio" href="./index.html">Студия</a></li>
+                <li class="nav-item"><a class="nav-link" href="./portfolio.html">Портфолио</a></li>
+                <li class="nav-item"><a class="nav-link" href="">Контакты</a></li>
               </ul>
             </nav>
 
@@ -34,7 +34,7 @@
               <a class="contact-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
               <a class="contact-tel" href="tel:+380961111111">+38 096 111 11 11</a>
             </div>
-
+            
           </div>
         </div>
       </header>
