--- a/portfolio.html
+++ b/portfolio.html
@@ -23,9 +23,9 @@
         <!-- main nav -->
             <nav class="nav">
               <ul class="nav-list">
-                <li><a class="nav-item studio-item" href="./index.html">Студия</a></li>
-                <li><a class="nav-item portfolio" href="./portfolio.html">Портфолио</a></li>
-                <li><a class="nav-item" href="">Контакты</a></li>
+                <li class="nav-item"><a class="nav-link studio" href="./index.html">Студия</a></li>
+                <li class="nav-item"><a class="nav-link" href="./portfolio.html">Портфолио</a></li>
+                <li class="nav-item"><a class="nav-link" href="">Контакты</a></li>
               </ul>
             </nav>
 
@@ -41,66 +41,70 @@
 
  <!-- Filter -->
       <main>
-          <div class="container filter">
+          <div class="container ">
+            <section class="filter">
               <ul class="filter-items">
-                  <li><button class="filter-item all" type="button">Все</button></li>
-                  <li><button class="filter-item" type="button">Веб-сайты</button></li>
-                  <li><button class="filter-item" type="button">Приложения</button></li>
-                  <li><button class="filter-item" type="button">Дизайн</button></li>
-                  <li><button class="filter-item" type="button">Маркетинг</button></li>
+                  <li class="filter-item"><button class="filter-button all" type="button">Все</button></li>
+                  <li class="filter-item"><button  class="filter-button" type="button">Веб-сайты</button></li>
+                  <li class="filter-item"><button  class="filter-button" type="button">Приложения</button></li>
+                  <li class="filter-item"><button class="filter-button" type="button">Дизайн</button></li>
+                  <li class="filter-item"><button  class="filter-button" type="button">Маркетинг</button></li>
               </ul>
+              </section>
           </div>
           
 
 <!-- Portfolio -->
-        <div class="container portfolio">
-          <ul class="portfolio-items">
-              <li class="portfolio-item">
-                  <img class="port-image" src="./images/port1.jpg" alt="Технокряк">
-                  <h3 class="portfolio-title">Технокряк</h>
-                  <p class="portfolio-description">Веб-сайт</p>
-              </li>
-              <li class="portfolio-item">
-                <img class="port-image" src="./images/port2.jpg" alt="Постер New Orlean vs Golden Star" width="370">
-                  <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h>
-                  <p class="portfolio-description">Дизайн</p>
-              </li>
-              <li class="portfolio-item">
-                <img class="port-image" src="./images/port3.jpg" alt="Ресторан Seafood" width="370">
-                  <h3 class="portfolio-title">Ресторан Seafood</h>
-                  <p class="portfolio-description">Приложение</p>
-              </li>
-              <li class="portfolio-item">
-                <img class="port-image" src="./images/port4.jpg" alt="Проект Prime" width="370">
-                  <h3 class="portfolio-title">Проект Prime</h>
-                  <p class="portfolio-description">Маркетинг</p>
-              </li>
-              <li class="portfolio-item"> 
-                <img class="port-image" src="./images/port5.jpg" alt="Проект Boxes" width="370">
-                  <h3 class="portfolio-title">Проект Boxes</h>
-                  <p class="portfolio-description">Приложение</p>
-              </li>
-              <li class="portfolio-item">
-                <img class="port-image" src="./images/port6.jpg" alt="Inspiration has no Borders" width="370">
-                  <h3 class="portfolio-title">Inspiration has no Borders</h>
-                  <p class="portfolio-description">Веб-сайт</p>
-              </li>
-              <li class="portfolio-item">
-                <img class="port-image" src="./images/port7.jpg" alt="Издание Limited Edition" width="370">
-                  <h3 class="portfolio-title">Издание Limited Edition</h>
-                  <p class="portfolio-description">Дизайн</p>
-              </li>
-              <li class="portfolio-item">
-                <img class="port-image" src="./images/port8.jpg" alt="роект LAB" width="370">
-                  <h3 class="portfolio-title">Проект LAB</h>
-                  <p class="portfolio-description">Маркетинг</p>
-              </li>
-              <li class="portfolio-item">
-                <img class="port-image" src="./images/port9.jpg" alt="Growing Business" width="370">
-                  <h3 class="portfolio-title">Growing Business</h>
-                  <p class="portfolio-description">Приложение</p>
-              </li>
-          </ul>
+        <div class="container">
+          <section class="portfolio">
+            <ul class="portfolio-items">
+                <li class="portfolio-item">
+                    <img class="port-image" src="./images/port1.jpg" alt="Технокряк">
+                    <h3 class="portfolio-title">Технокряк</h>
+                    <p class="portfolio-description">Веб-сайт</p>
+                </li>
+                <li class="portfolio-item">
+                  <img class="port-image" src="./images/port2.jpg" alt="Постер New Orlean vs Golden Star" width="370">
+                    <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h>
+                    <p class="portfolio-description">Дизайн</p>
+                </li>
+                <li class="portfolio-item">
+                  <img class="port-image" src="./images/port3.jpg" alt="Ресторан Seafood" width="370">
+                    <h3 class="portfolio-title">Ресторан Seafood</h>
+                    <p class="portfolio-description">Приложение</p>
+                </li>
+                <li class="portfolio-item">
+                  <img class="port-image" src="./images/port4.jpg" alt="Проект Prime" width="370">
+                    <h3 class="portfolio-title">Проект Prime</h>
+                    <p class="portfolio-description">Маркетинг</p>
+                </li>
+                <li class="portfolio-item"> 
+                  <img class="port-image" src="./images/port5.jpg" alt="Проект Boxes" width="370">
+                    <h3 class="portfolio-title">Проект Boxes</h>
+                    <p class="portfolio-description">Приложение</p>
+                </li>
+                <li class="portfolio-item">
+                  <img class="port-image" src="./images/port6.jpg" alt="Inspiration has no Borders" width="370">
+                    <h3 class="portfolio-title">Inspiration has no Borders</h>
+                    <p class="portfolio-description">Веб-сайт</p>
+                </li>
+                <li class="portfolio-item">
+                  <img class="port-image" src="./images/port7.jpg" alt="Издание Limited Edition" width="370">
+                    <h3 class="portfolio-title">Издание Limited Edition</h>
+                    <p class="portfolio-description">Дизайн</p>
+                </li>
+                <li class="portfolio-item">
+                  <img class="port-image" src="./images/port8.jpg" alt="роект LAB" width="370">
+                    <h3 class="portfolio-title">Проект LAB</h>
+                    <p class="portfolio-description">Маркетинг</p>
+                </li>
+                <li class="portfolio-item">
+                  <img class="port-image" src="./images/port9.jpg" alt="Growing Business" width="370">
+                    <h3 class="portfolio-title">Growing Business</h>
+                    <p class="portfolio-description">Приложение</p>
+                </li>
+            </ul>
+          </section>
         </div>
     </main>
     <footer class="footer">
