--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
       <!-- HERO section -->
      
           <section class="hero">
-            <div class="container hero-header">
-              <h1 class="hero-title">Эффективные решения </br> для вашего бизнеса</h1>
-              <button class="button" type="button" value="Заказать услугу"><span>Заказать услугу</span></button>
-            </div> 
+              <div class="container">
+                <div class="hero-header">
+                  <h1 class="hero-title">Эффективные решения </br> для вашего бизнеса</h1>
+                  <button class="button" type="button" value="Заказать услугу">Заказать услугу</button>
+                </div>
+              </div> 
           </section>
         
           <!-- advantages-->
@@ -81,6 +83,7 @@
               </li>
             </ul>
           </div>
+
           <!--WWD-->
           <div class="container">
             <section class="wwd">
