hope final fixes

--- a/portfolio.html
+++ b/portfolio.html
@@ -41,8 +41,8 @@
 
  <!-- Filter -->
       <main>
-          <div class="container ">
-            <section class="filter">
+        <section class="filter"></section>
+          <div class="container">
               <ul class="filter-items">
                   <li class="filter-item"><button class="filter-button all" type="button">Все</button></li>
                   <li class="filter-item"><button  class="filter-button" type="button">Веб-сайты</button></li>
@@ -50,13 +50,12 @@
                   <li class="filter-item"><button class="filter-button" type="button">Дизайн</button></li>
                   <li class="filter-item"><button  class="filter-button" type="button">Маркетинг</button></li>
               </ul>
-              </section>
           </div>
-          
+         </section> 
 
 <!-- Portfolio -->
+      <section class="portfolio">
         <div class="container">
-          <section class="portfolio">
             <ul class="portfolio-items">
                 <li class="portfolio-item">
                     <img class="port-image" src="./images/port1.jpg" alt="Технокряк">
@@ -104,8 +103,8 @@
                     <p class="portfolio-description">Приложение</p>
                 </li>
             </ul>
-          </section>
         </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="container">
