--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
               </div> 
           </section>
         
-          <!-- advantages-->
+      <!-- advantages-->
+      <section class="advantages">
           <div class="container">
             <ul class="advant">
               <li class="advant-item">
@@ -83,10 +84,10 @@
               </li>
             </ul>
           </div>
-
-          <!--WWD-->
-          <div class="container">
-            <section class="wwd">
+        </section>
+      <!--WWD-->
+        <section class="wwd"></section>
+          <div class="container"> 
             <h2 class="wwd-title">Чем мы занимаемся</h2>
               <ul class="wwd-list">
                 <li class="wwd-item">
@@ -99,36 +100,44 @@
                   <img src="./images/wwd3.jpg" alt="wwdimg" />
                 </li>
               </ul>
-          </section>
           </div>  
-          <!-- our team section  -->
-          <div class="container">
-          <section class="team">
-            <h2 class="team-title">Наша команда</h2>
-            <ul class="team-list">
-              <li class="team-item">
-                <img src="./images/1.jpg" width="270" alt="Product Designer" />
-                <h3 class="team-name">Игорь Демьяненко</h3>
-                <p class="team-position" lang="en">Product Designer</p>
-              </li>
-              <li class="team-item">
-                <img src="./images/2.jpg" width="270" alt="Frontend Developer" />
-                <h3 class="team-name">Ольга Репина</h3>
-                <p class="team-position" lang="en">Frontend Developer</p>
-              </li>
-              <li class="team-item"> 
-                <img src="./images/3.jpg" width="270" alt="Marketing" />
-                <h3 class="team-name">Николай Тарасов</h3>
-                <p class="team-position" lang="en">Marketing</p>
-              </li>
-              <li class="team-item">
-                <img src="./images/4.jpg" width="270" alt="UI Designer" />
-                <h3 class="team-name">Михаил Ермаков</h3>
-                <p class="team-position" lang="en">UI Designer</p>
-              </li>
-            </ul>
           </section>
-        </div>   
+      <!-- our team section  -->
+      <section class="team-section">
+          <div class="container">
+              <h2 class="team-title">Наша команда</h2>
+              <ul class="team-list">
+                <li class="team-item">
+                  <img src="./images/1.jpg" width="270" alt="Product Designer"/>
+                <div class="team-member-info">
+                  <h3 class="team-name">Игорь Демьяненко</h3>
+                  <p class="team-position" lang="en">Product Designer</p>
+                </div>
+                </li>
+                <li class="team-item">
+                  <img src="./images/2.jpg" width="270" alt="Frontend Developer"/>
+                <div class="team-member-info">  
+                  <h3 class="team-name">Ольга Репина</h3>
+                  <p class="team-position" lang="en">Frontend Developer</p>
+                </div>
+                </li>
+                <li class="team-item"> 
+                  <img src="./images/3.jpg" width="270" alt="Marketing"/>
+                <div class="team-member-info">
+                  <h3 class="team-name">Николай Тарасов</h3>
+                  <p class="team-position" lang="en">Marketing</p>
+                </div>
+                </li>
+                <li class="team-item">
+                  <img src="./images/4.jpg" width="270" alt="UI Designer" />
+                <div class="team-member-info">
+                  <h3 class="team-name">Михаил Ермаков</h3>
+                  <p class="team-position" lang="en">UI Designer</p>
+                </div>
+                </li>
+              </ul>  
+          </div>  
+      </section> 
     </main>
     <footer class="footer">
       <div class="container">
