wwd section fixed + headings line-height fixed

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           </div>
         </section>
       <!--WWD-->
-        <section class="wwd"></section>
+        <section class="wwd">
           <div class="container"> 
             <h2 class="wwd-title">Чем мы занимаемся</h2>
               <ul class="wwd-list">
@@ -101,7 +101,7 @@
                 </li>
               </ul>
           </div>  
-          </section>
+        </section>
       <!-- our team section  -->
       <section class="team-section">
           <div class="container">
