footer fix + portfolio one section + auto-margin

--- a/index.html
+++ b/index.html
@@ -139,16 +139,14 @@
           </div>  
       </section> 
     </main>
-    <footer class="footer">
+    <footer>
       <div class="container">
-        <div class="footer-info">
           <a class="footer-logo-title" href="./">Web<span       class="footer-logo-span">Studio</span></a>
             <address class="f-address">
               <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
               <a class="footer-mail" href="mailto:info@example.com">info@example.com</a>
               <a class="footer-tel" href="tel:+380991111111">+38 099 111 11 11</a>
             </address>
-        </div>
       </div>
     </footer>
   </body>
